--- a/templates/main.html
+++ b/templates/main.html
@@ -211,10 +211,8 @@
 </body>
 <script>
     var map;
-    var circle;
     var marker;
-    var facilityMarkers = []; // 기존 마커들을 담는 배열
-    var clickedMarker;
+    var circle;
 
     // 목포를 기본 지도로
     function selectMapList() {
@@ -230,8 +228,12 @@
         naver.maps.Event.addListener(map, 'click', function(e) {
             var latlng = e.coord;
             updateMarker(latlng);
-            removeFacilityMarkers();
-            clickedMarker = null;
+            
+            if (marker) {
+                for(var i = 0; i < marker.length; i++){
+                    marker[i].setMap(null);
+                }
+            }
         });
     }
 
@@ -291,23 +293,19 @@
         sendCoordinatesToServer(latlng.y, latlng.x);
     }
 
+    
     // 마커 업데이트
     function updateMarker(latlng) {
         // 기존 마커와 반경 초기화
         if (circle) {
             circle.setMap(null);
         }
-        
-        if (marker) {
-            marker.setMap(null);
-        }
-        
-       
+    
         marker = new naver.maps.Marker({
             map: map,
             position: latlng,
         });
-
+    
         // 반경 생성
         circle = new naver.maps.Circle({
             map: map,
@@ -319,9 +317,10 @@
             strokeOpacity: 0.5,
             strokeWeight: 2,
         });
-
+    
         sendCoordinatesToServer(latlng.y, latlng.x);
     }
+    
 
     // 좌표 전송
     function sendCoordinatesToServer(lat, lng) {
@@ -333,9 +332,6 @@
                 lng: lng
             },
             success: function (response) {
-                // 기존 마커들 제거
-                removeFacilityMarkers();
-
                 if (Array.isArray(response) && response.length > 0) {
                     for (var i = 0; i < response.length; i++) {
                         var facility = response[i];
@@ -345,8 +341,6 @@
                             position: facilityLatlng,
                             title: facility.name
                         });
-                        // 새로운 마커를 배열에 추가
-                        facilityMarkers.push(facilityMarker);
                     }
                 } else {
                     alert('주변에 시설이 없습니다.');
@@ -358,15 +352,6 @@
             }
         });
     }
-
-    // 기존 마커들을 모두 제거하는 함수
-    function removeFacilityMarkers() {
-        for (var i = 0; i < facilityMarkers.length; i++) {
-            facilityMarkers[i].setMap(null);
-        }
-        facilityMarkers = [];
-    }
 </script>
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </html>
