--- a/templates/main.html
+++ b/templates/main.html
@@ -56,7 +56,7 @@
             height: 190px;
             margin-bottom: 20px;
         }
-        
+        /*
         .search_bar {
             width: 500px;
             border-color: #855b62;
@@ -104,8 +104,7 @@
             color: white;
             border-color: white;
         }
-        
-        /* 추가된 스타일 */
+         */
         #map {
             width: 100%;
             height: calc(100vh - 60px);
@@ -182,7 +181,7 @@
         .top-bar {
             position: absolute;
             left: 400px; /* sidebar 너비만큼 왼쪽에서부터 떨어져 있어야 합니다. */
-            top: 60px; /* navbar 높이만큼 위에서부터 떨어져 있어야 합니다. */
+            top: 5px; /* navbar 높이만큼 위에서부터 떨어져 있어야 합니다. */
             width: 500px; /* 전체 너비에서 sidebar 너비를 뺀 만큼의 너비 */
             height: 50px;
             margin: 20px;
@@ -197,7 +196,54 @@
             border: 1px solid lightgray;
             box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
         }
-        
+
+        .ai-bar {
+            width: 400px; /* 전체 너비에서 sidebar 너비를 뺀 만큼의 너비 */
+            height: 40px;
+            margin: 20px;
+            display: flex;
+            justify-content: space-between; /* 내부 아이템 간격을 균등하게 배치 */
+            align-items: center;
+            background-color: white; /* 바의 배경색, 실제 사이트의 색상과 일치해야 합니다. */
+            transition: left 0.5s ease; /* 부드러운 이동을 위한 트랜지션 */
+            z-index: 2000;
+            font-weight: 700;
+            border-radius: 40px;
+            border: 1px solid lightgray;
+            box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+            padding: 10px;
+            position: fixed;
+            bottom: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            transition: height 0.5s ease;
+        }
+
+        .ai-txt {
+            border: none;
+            background: none;
+            outline: none;
+            float: left;
+            padding: 0px;
+            color: black;
+            font-size:  11px;
+            line-height: 30px;
+            width: 100%;
+            height: 100%;
+        }
+
+        .ai-btn {
+            float: right;
+            width: 40px;
+            height: 100%;
+            border-radius: 50%;
+            background-color: white;
+            border: none;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
         .right-bar {
             position: absolute;
             right: 0;
@@ -212,6 +258,25 @@
             z-index: 2000;
             font-weight: 700;
             border-radius: 25px;
+            margin: 10px;
+            border: 1px solid lightgray;
+            box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+        }
+
+        .search-bar {
+            position: absolute;
+            right: 0;
+            top: 470px;
+            width: 80px;
+            height: 40px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
+            align-items: center;
+            background-color: white;
+            z-index: 2000;
+            font-weight: 700;
+            border-radius: 20px;
             margin: 10px;
             border: 1px solid lightgray;
             box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
@@ -252,39 +317,6 @@
  
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="/static/img/logo1.png" alt="logo"></a>
-
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <form class="d-flex justify-content-center" role="search">
-                    <input id="address" class="form-control me-2 search_bar" id="input_search" class="input_search"
-                        type="text" placeholder="Search" aria-label="Search" value="">
-                    <button id="submit" class="btn btn-outline-warning button_search" id="search_btn"
-                        type="button">Search</button>
-                </form>
-                <li class="nav-item dropdown" style="list-style:none; margin-right:50px;">
-                    <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        <i class="fas fa-ellipsis-h"></i>
-                    </a>
-                    <ul class="dropdown-menu" style="z-index: 5000">
-                        <li><a class="dropdown-item" href="#"><i class="fas fa-cog"></i> 설정</a></li>
-                        <li><a class="dropdown-item" href="#"><i class="fas fa-user"></i> 프로필</a></li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-                        <li><a class="dropdown-item" href="#"><i class="fas fa-sign-out-alt"></i> 로그아웃</a></li>
-                    </ul>
-                </li>
-            </div>
-        </div>
-    </nav>
     <button id="toggle-sidebar" class="btn toggle-btn">></button>
 
     <div class="sidebar">
@@ -367,6 +399,11 @@
         </li>
     </div>
 
+    <form class="ai-bar" action="" method="get">
+        <input id="ai-txt" class="ai-txt" type="text" name="" placeholder="질문을 적어주세요.">
+        <button id="ai-btn" class="ai-btn" type="submit">🤖</button>
+    </form>
+
     <div class="right-bar">
         <div class="bar-item">재난⛑️</div>
         <div class="bar-item">치안🚨</div>
@@ -376,11 +413,11 @@
         <div class="bar-item">시설🏢</div>
     </div>
 
-    <div class="searh-bar">
-   
+    <div class="search-bar">
+        <div class="bar-item">🔍</div>
     </div>
 
-    <img class="home-img" src="/static/img/home.png">
+    <!-- <img class="home-img" src="/static/img/home.png"> -->
 
     <div id="map"></div>
 </body>
@@ -561,6 +598,7 @@
             }
         });
     });
+
 </script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
