--- a/templates/main.html
+++ b/templates/main.html
@@ -182,7 +182,7 @@
             position: absolute;
             left: 400px; /* sidebar 너비만큼 왼쪽에서부터 떨어져 있어야 합니다. */
             top: 5px; /* navbar 높이만큼 위에서부터 떨어져 있어야 합니다. */
-            width: 500px; /* 전체 너비에서 sidebar 너비를 뺀 만큼의 너비 */
+            width: 410px; /* 전체 너비에서 sidebar 너비를 뺀 만큼의 너비 */
             height: 50px;
             margin: 20px;
             display: flex;
@@ -199,7 +199,7 @@
 
         .ai-bar {
             width: 400px; /* 전체 너비에서 sidebar 너비를 뺀 만큼의 너비 */
-            height: 40px;
+            height: 45px;
             margin: 20px;
             display: flex;
             justify-content: space-between; /* 내부 아이템 간격을 균등하게 배치 */
@@ -226,7 +226,7 @@
             float: left;
             padding: 0px;
             color: black;
-            font-size:  11px;
+            font-size:  12px;
             line-height: 30px;
             width: 100%;
             height: 100%;
@@ -377,11 +377,10 @@
     </div>
 
     <div class="top-bar">
-        <div class="bar-item">🍴음식점</div>
-        <div class="bar-item">🍵카페</div>
-        <div class="bar-item">🛏️펜션</div>
-        <div class="bar-item">🚘주차장</div>
-        <div class="bar-item">🏷️쿠폰</div>
+        <div class="bar-item">🔥핫플</div>
+        <div class="bar-item">🚏정류장</div>
+        <div class="bar-item">🏫학원</div>
+        <div class="bar-item">🏪편의점</div>
         <li class="bar-item" style="list-style:none">
             <a class="nav-link dropdown-toggle more" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 <i class="fas fa-ellipsis-h"></i>
