--- a/templates/main.html
+++ b/templates/main.html
@@ -447,7 +447,7 @@
         .selected-detail-item {
             position: relative;
             font-size: 14px;
-            width: 130px;
+            width: 160px;
             height: 30px;
             padding: 13px;
             border-radius: 20px;
@@ -462,8 +462,8 @@
 
         .apply {
             position: fixed;
-            bottom: calc(58vh - 248px);
-            right: calc(51vw - 440px);
+            bottom: calc(45vh - 248px);
+            right: calc(50vw - 440px);
             border-radius: 5px;
             border: none;
             padding: 5px 25px;
@@ -645,7 +645,7 @@
             <div id="details-residential" class="detail-container" style="display:none;">
                 <p style="width: 100%; text-align: start; padding: 0 20px; margin: 10px 0"><span style="color: lightcoral;">● </span>거주 → 방 개수
                 </p>
-                <p style="width: 100%; text-align: start; padding: 0 20px; font-size: 13px; color: grey">방 개수를 선택해주세요.<br>(5개까지 선택 가능합니다.)</p>
+                <p style="width: 100%; text-align: start; padding: 0 20px; font-size: 13px; color: grey">방 개수를 선택해주세요.</p>
                 <div class="detail">1개</div>
                 <div class="detail">2개</div>
                 <div class="detail">3개</div>
@@ -653,7 +653,7 @@
                 <div class="detail">5개 이상</div>
                 <p style="width: 100%; text-align: start; padding: 0 20px; margin: 10px 0"><span style="color: lightcoral;">● </span>거주 → 평수
                 </p>
-                <p style="width: 100%; text-align: start; padding: 0 20px; font-size: 13px; color: grey">평수를 선택해주세요.<br>(5개까지 선택 가능합니다.)</p>
+                <p style="width: 100%; text-align: start; padding: 0 20px; font-size: 13px; color: grey">평수를 선택해주세요.</p>
                 <div class="detail">10평대</div>
                 <div class="detail">20평대</div>
                 <div class="detail">30평대</div>
@@ -661,26 +661,26 @@
                 <div class="detail">50평대 이상</div>
                 <p style="width: 100%; text-align: start; padding: 0 20px; margin: 10px 0"><span style="color: lightcoral;">● </span>거주 → 준공 년도
                 </p>
-                <p style="width: 100%; text-align: start; padding: 0 20px; font-size: 13px; color: grey">준공 년도를 선택해주세요.<br>(5개까지 선택 가능합니다.)</p>
+                <p style="width: 100%; text-align: start; padding: 0 20px; font-size: 13px; color: grey">준공 년도를 선택해주세요.</p>
                 <div class="detail">5년 이내</div>
                 <div class="detail">10년 이내</div>
                 <div class="detail">15년 이내</div>
                 <div class="detail">20년 이내</div>
                 <div class="detail">25년 이상</div>
-                <p style="width: 100%; text-align: start; padding: 0 20px; margin: 10px 0"><span style="color: lightcoral;">● </span>거주 → 세대 수
-                </p>
-                <p style="width: 100%; text-align: start; padding: 0 20px; font-size: 13px; color: grey">세대 수를 선택해주세요.<br>(3개까지 선택 가능합니다.)</p>
-                <div class="detail">200세대 이상</div>
-                <div class="detail">500세대 이상</div>
-                <div class="detail">1000세대 이상</div>
                 <p style="width: 100%; text-align: start; padding: 0 20px; margin: 10px 0"><span style="color: lightcoral;">● </span>거주 → 가격
                 </p>
-                <p style="width: 100%; text-align: start; padding: 0 20px; font-size: 13px; color: grey">가격을 선택해주세요.<br>(5개까지 선택 가능합니다.)</p>
+                <p style="width: 100%; text-align: start; padding: 0 20px; font-size: 13px; color: grey">가격을 선택해주세요.</p>
                 <div class="detail">1억 이하</div>
                 <div class="detail">2억 이하</div>
                 <div class="detail">3억 이하</div>
                 <div class="detail">4억 이하</div>
                 <div class="detail">4억 이상</div>
+                <p style="width: 100%; text-align: start; padding: 0 20px; margin: 10px 0"><span style="color: lightcoral;">● </span>거주 → 세대 수
+                </p>
+                <p style="width: 100%; text-align: start; padding: 0 20px; font-size: 13px; color: grey">세대 수를 선택해주세요.</p>
+                <div class="detail">200세대 이상</div>
+                <div class="detail">500세대 이상</div>
+                <div class="detail">1000세대 이상</div>
             </div>
             <div id="details-leisure" class="detail-container" style="display:none;">
                 <p style="width: 100%; text-align: start; padding: 0 20px;"><span style="color: thistle;">● </span>여가
