--- a/templates/main.html
+++ b/templates/main.html
@@ -55,7 +55,12 @@
       <div class="bar-item" onclick="showMarkers(['식당'])">🍴식당</div>
     </div>
 
-    <form class="ai-bar" action="" method="get">
+    <form
+      class="ai-bar"
+      action=""
+      method="get"
+      onsubmit="handleFormSubmit(event);"
+    >
       <input
         id="ai-txt"
         class="ai-txt"
@@ -95,6 +100,7 @@
       >
         시설🏢
       </div>
+      <div class="bar-item1" onclick="showMarkers(['아파트'])">아파트🏦</div>
     </div>
 
     <!-- <img class="home-img" src="/static/img/home.png"> -->
